<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="format">dev:type:src_ip:src_port—>dst_ip:dst_port:ToS:payload_size:timeval\n</string>
    <string name="app_name">HAPdroid</string>
    <string name="getroot">Get Root</string>
    <string name="exit">Exit</string>
    <string name="rootreq">Root access, in particular the su package, 
        is required for this application to work properly. 
        Please Root your phone, if not already done so, 
        and install the su package.</string>
        
    <string name="notification_title">HAPdroid</string>
    <string name="notification_message">Capturing network Traffic</string>
    <string name="source_wlan">wlan</string>
    <string name="source_mobile">mobile</string>
    
    <string name="capture_nothing">no flows recieved</string>
    <string name="capture_start">Start Capture</string>
    <string name="capture_stop">Stop Capture</string>
    <string name="show_graphlet">Graphlet</string>
    <string name="settings">Settings</string>
    <string name="file_open">Open…</string>
    <string name="file_save">Save</string>
    <string name="file_save_successfull">File successfully saved to:</string>
    <string name="input_ip">Please specify the source IP</string>
    <string name="input_ip_ok">OK</string>
    <string name="input_ip_cancel">Cancel</string>
    <string name="input_ip_wrong">invalid IP address, aborting.</string>
    <string name="import_file_title">Choose File from SD</string>
    <string name="load_graphlet_message">Please wait while the graphlet is generating</string>
    <string name="load_graphlet_message_title"></string>
    <string name="starttime">Starttime</string>
    <string name="endtime">Endtime</string>
    <string name="wrong_file_message">File extension not supported for import</string>
    <string name="empty_flowtable_message">The flow table is empty. Did you specify the correct IP address for pcap file import?</string>
    <string name="no_multitouch">Sorry your device does NOT support MultiTouch!\n\n(No PinchZoom is possible!)</string>
</resources>