<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/rootreq_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
		android:text="@string/rootreq">
        <requestFocus />
    </TextView>

    <Button
        android:id="@+id/getroot_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getroot" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>